...
    var body: some View {
        List {
            VStack() {
                UserBadgeView()
                    .padding(.top)
                Picker(selection: $currentListType, label: Text("List Type")) {
                    Text("My Favorites").tag(ProfileListType.favorites)
                    Text("My Reviews").tag(ProfileListType.reviews)
                }
                .pickerStyle(SegmentedPickerStyle())
            }

            if currentListType == ProfileListType.favorites {
                if nearMe.favorites?.count == 0 {
...
