...
                }, label: { Text("Enable Location") })
                .padding()
                .foregroundColor(.white)
                .background(Color.green)
                .cornerRadius(10)
                .padding()
                .navigationBarTitle(Text("Near Me"))
            } else {
                NearMeListView(model: model)
                .navigationBarTitle(Text("Near Me"))
            }
            Text("No \(settings.preferredTerm.capitalized) Selected")
            .foregroundColor(.secondary)
...
                Text("No \(settings.preferredTerm.capitalized) Near You")
                .foregroundColor(.secondary)
                .navigationBarTitle(Text("Near Me"))
            } else {
                Picker(selection: $listTypeSelection, label: Text("List Type")) {
                    Text("Washrooms").tag(NearMeListTyle.washrooms)
                    Text("Buildings").tag(NearMeListTyle.buildings)
                }
                .pickerStyle(SegmentedPickerStyle())
            }
                        
            if listTypeSelection == NearMeListTyle.washrooms {
                WashroomsListView(model: model)
...
