//
//  SettingsUITest.swift
//  ThroneUITests
//
//  Created by Nicholas Josephson on 2020-03-21.
//  Copyright © 2020 Throne. All rights reserved.
//

import XCTest

class SettingsUITest: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testDetails() {
        let app = XCUIApplication()
        let tablesQuery = app.tables
        app.tabBars.buttons["Me"].tap()
        app.buttons["Settings"].tap()
        
        XCTAssert(tablesQuery.buttons["Preferred Terminology"].exists)
        XCTAssert(tablesQuery.buttons["Add to Siri"].exists)
        XCTAssert(tablesQuery.buttons["Log Out"].exists)

        app.navigationBars["Settings"].buttons["Back"].tap()
    }
    
    func testTerminologyPicker() {
        let app = XCUIApplication()
        let tablesQuery = app.tables
        app.tabBars.buttons["Me"].tap()
        app.buttons["Settings"].tap()

        tablesQuery.buttons["Preferred Terminology"].tap()
        tablesQuery.buttons["washroom"].tap()
    }

}
